fix homepage title overflow

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -145,7 +145,7 @@ $menu-label-color: $primary
   .artist-roll-title
     width: 85%
     line-height: 1.1em
-    height: 2.5em
+    min-height: 2.5em
   .artist-roll-name
     font-size: .9em;
     letter-spacing: 0.02em
